Update dependencies, try to fix errors